Fix bug with whitespace on screens 425px & lower

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -70,7 +70,6 @@ footer {
 
 .welcome h1 {
     color: white;
-    margin: 0 155px;
 }
 
 .title-container {
